# wireviz-doc

./: .gitignore  LICENSE  README.md  REQUIREMENTS.md  pyproject.toml
docs/: cli.md  integration.md  schema.md  template-design.md  tutorial-custom-templates.md
examples/: README.md  demo-harness.harness.yml  io-cable-20pin.harness.yml  io-cable-20pin.yml  parts-library.yml  simple-harness.harness.yml
src/wireviz_doc/: __init__.py  cli.py  output.py  parser.py  schema.py
src/wireviz_doc/composers/: __init__.py  svg_composer.py
src/wireviz_doc/generators/: __init__.py  bom.py  wireviz_yaml.py  wiring_table.py
src/wireviz_doc/models/: __init__.py  base.py  components.py  connections.py  document.py  parts.py
src/wireviz_doc/resolvers/: __init__.py  images.py
src/wireviz_doc/templates/: __init__.py  bom-table.svg.j2  example_data.py  sheet-a4.svg.j2  title-block.svg.j2  wiring-table.svg.j2
tests/: __init__.py  test_models.py
